--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>After School Club</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.16/dist/vue.js"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- The element where Vue will mount -->
@@ -30,8 +31,55 @@
           <button disabled='disabled'v-else>
         Add to cart </button></div>
         <div v-else>
+
           <h2>Checkout</h2>
-        
+          <p>
+            <strong>First Name:</strong>
+            <!--This input field is bound to 'firstName'in the 'order'object-->
+            <input v-model="order.firstName"/>
+          </p>
+
+          <p>
+            <strong>Last Name:</strong>
+            <!--This input field is bound to 'lastName'in the 'order'object-->
+            <input v-model="order.lastName"/>
+          </p>
+          <h2>Order Information</h2>
+          <p>First Name: {{order.firstName}}</p>
+          <p>Last Name: {{order.lastName}}</p>
+
+          <p>
+            <strong>Address:</strong><input v-model="order.address"/>
+          </p>
+        <p>
+          <strong>city:</strong> <input v-model="order.city"/>
+        </p>
+        <p>
+  <strong>State:</strong>
+  <select v-model="order.state">
+    <option disabled value="">State</option>
+    <option>Dubai</option>
+    <option>Sharjah</option>
+    <option>Ajman</option>
+    <option>Ras Al Khaimah</option>
+     <option>Abu Dhabi</option>
+      <option>Umm al Quwain</option>
+  </select>
+</p>
+<p>
+  <strong>Zip/Postal Code:</strong>
+  <input v-model="order.zip" />
+</p>
+
+<h2>Order Information</h2>
+<p>First Name: {{order.firstName}}</p>
+<p>Last Name: {{order.lastName}}</p>
+<p>Address: {{order.address}}</p>
+<p>City: {{order.city}}</p>
+<p>Zip: {{order.zip}}</p>
+<p>State: {{order.state}}</p>
+
+
         </div>
        
       </main>
@@ -51,6 +99,13 @@
           },
           cart:[],
           showProduct: true,
+          order: {
+            firstName: '',
+            lastName:'',
+            city:'',
+            zip:'',
+            state:'',
+          },
         },
         methods:{
           showCheckout(){
